pull in code from UDF